--- a/static/styles.css
+++ b/static/styles.css
@@ -15,6 +15,16 @@ body {
   justify-content: center;
 }
 
+form{
+  text-align: center;
+}
+
+#submit-button{
+  margin-top: 24px;
+  max-width: 56px;
+  align-self: center;
+}
+
 .file-input-wrapper {
   position: relative;
   display: inline-block;
@@ -73,4 +83,17 @@ input[type="file"] {
   height: 100%;
   opacity: 0;
   cursor: pointer;
+}
+
+.text-input-div{
+  display: none;
+  flex-direction: column;
+}
+label{
+  margin-top: 24px;
+  color: white;
+}
+#file-info{
+  margin-top: 12px;
+  font-size: 18px;
 }
