--- a/templates/listo.html
+++ b/templates/listo.html
@@ -6,7 +6,8 @@
   <title>Vectorizar | Audion't</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>body {
+  <style>
+  body {
     font-family: "Arial", sans-serif;
     background-color: #1f1f1f;
     display: flex;
@@ -21,6 +22,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 36px;
+  }
+
+  p{
+    text-align: center;
   }
   
   form{
