--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                 // show in transcription div
                 document.getElementById("transcription").innerHTML = json["message"];
             } else {
-                alert(json["message"]);
+                alert(json["error"]);
             }
           });
       });
