--- a/templates/get_transcription.html
+++ b/templates/get_transcription.html
@@ -71,7 +71,7 @@
   <body>
     <div id="app-container">
       <div id="logo">
-        <img src="static/audiont.jpg" alt="logo" />
+        <img src="/audiont/static/audiont.jpg" alt="logo" />
       </div>
       <div id="modules">
           
