--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
             id="upload-btn"
             onclick="document.getElementById('upload').click()"
           >
-            Subir audio (mp3, wav, ogg)
+            Subir audio
           </button>
           <input
             type="file"
@@ -114,9 +114,9 @@
 
       // When user adds a file, upload it to the server
       document.getElementById("upload").addEventListener("change", function () {
-        // check if the file is an audio
-        if (!this.files[0].type.match(/audio.*/)) {
-          alert("No es un audio");
+        // check if the file is less than 50MB
+        if (this.files[0].size > 50000000) {
+          alert("El archivo es demasiado grande");
           return;
         }
 
