--- a/templates/index.html
+++ b/templates/index.html
@@ -6,101 +6,36 @@
     <link rel="stylesheet" href="static/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-      *,
-      html {
-        margin: 0;
-        padding: 0;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-      }
-      body {
-        background-color: #d9bfa6;
-      }
-      tr:nth-child(even) {
-        background-color: #dfe3e8;
-      }
-      td {
-        padding: 4px;
-      }
-      #app-container {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        max-width: 1200px;
-        margin: auto;
-      }
 
-      #logo {
-        text-align: center;
-        width: 100%;
-        padding: 32px 0 32px 0;
-      }
-      #logo img {
-        max-width: 600px;
-        margin: auto;
-      }
-      .module {
-        border-radius: 5px;
-        padding: 10px;
-        margin: 0px 10px 16px 10px;
-        overflow-x: scroll;
-      }
-      /* remove scrollbar */
-      .module::-webkit-scrollbar {
-        display: none;
-      }
-      .module-name {
-        font-weight: 900;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        padding: 0px 0px 12px 4px;
-      }
-      #image-container {
-        overflow: scroll;
-        max-height: 300px;
-        display: none;
-      }
-      table {
-        margin-bottom: 12px;
-      }
-      button {
-        font-size: 14px;
-        padding: 4px;
-      }
-    </style>
   </head>
   <body>
     <div id="app-container">
-      <div id="logo">
-        <img src="static/audiont.jpg" alt="logo" />
+      <div id="logo" style="width: 100%">
+        <img src="static/audiont.jpg" style="width: 100%" alt="logo" />
       </div>
-      <div id="modules">
-        <div class="module" name="Funciones">
-          <!-- Botón de Subir audio-->
-          <button
-            id="upload-btn"
-            onclick="document.getElementById('upload').click()"
-          >
-            Subir audio
-          </button>
-          <input
-            type="file"
-            id="upload"
-            style="display: none;"
-          />
-        <div class="module" name="message">
-            <div id="message"></div>
 
-        </div>
+      <div class="module" name="Funciones">
+        <!-- Botón de Subir audio-->
+        <button
+          id="upload-btn"
+          onclick="document.getElementById('upload').click()"
+        >
+          Subir audio
+        </button>
+        <input type="file" id="upload" style="display: none" />
+
+      </div>
+
+      <div id="message">
+        <p></p>
       </div>
     </div>
 
     <script type="text/javascript">
+      // app prefix
+      let app_prefix = "/audiont";
 
-        // app prefix
-        let app_prefix = "/audiont";
-
-        
-        // Add module names to the UI
+      // Add module names to the UI
       function addModuleNames() {
         let modules = document.getElementsByClassName("module");
         for (let i = 0; i < modules.length; i++) {
@@ -126,35 +61,33 @@
         // upload the audio to the server
         let formData = new FormData();
         formData.append("file", this.files[0]);
-        fetch(app_prefix+"/upload_audio/" + id, {
+        fetch(app_prefix + "/upload_audio/" + id, {
           method: "POST",
-          body: formData,   
+          body: formData,
         })
           .then((response) => response.json())
           .then((json) => {
             //print the response
             if (json["status"] == "success") {
-                // show the link to the user upload
-                let message = document.getElementById("message");
-                message.innerHTML = json["message"];
-                
-                fetch(app_prefix+"/start_transcription/" + id, {
-                    method: "POST"
-                })
-                .then(response => response.json())
-                .then(json => {
-                    if (json["status"] == "transcription_started") {
-                        // Handle response (if needed)
-                        console.log("Transcription started!");
-                    }
-                });
+              // show the link to the user upload
+              let message = document.querySelector("#message p");
+              message.innerHTML = json["message"];
 
+              fetch(app_prefix + "/start_transcription/" + id, {
+                method: "POST",
+              })
+                .then((response) => response.json())
+                .then((json) => {
+                  if (json["status"] == "transcription_started") {
+                    // Handle response (if needed)
+                    console.log("Transcription started!");
+                  }
+                });
             } else {
-                alert(json["error"]);
+              alert(json["error"]);
             }
           });
       });
-
     </script>
   </body>
 </html>
